--- a/handtime-html/index.html
+++ b/handtime-html/index.html
@@ -58,7 +58,7 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="product.html">Products</a>
+                <a class="nav-link" href="product.html">Services</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="testimonial.html">Testimonial</a>
@@ -67,14 +67,6 @@
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
             </ul>
-            <div class="user_optio_box">
-              <a href="">
-                <i class="fa fa-user" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-              </a>
-            </div>
           </div>
         </nav>
       </div>
@@ -96,7 +88,7 @@
                       DREAMWORKS POWER AND TECHNOLOGIES, INC.
                     </h1>
                     <p>
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores perspiciatis, illo maxime voluptatem a itaque suscipit.
+                      We handle all aftermarket requirements of customer such as Parts, Controllers, Lubricants, Filters and all kinds of repair both on mechanical and electrical components of Generating sets, ATS, Switchgear & Master Controller.
                     </p>
                     <div class="btn-box">
                       <a href="contact.html" class="btn1">
@@ -120,7 +112,7 @@
                       DREAMWORKS POWER AND TECHNOLOGIES, INC.
                     </h1>
                     <p>
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores perspiciatis, illo maxime voluptatem a itaque suscipit.
+                      We handle all aftermarket requirements of customer such as Parts, Controllers, Lubricants, Filters and all kinds of repair both on mechanical and electrical components of Generating sets, ATS, Switchgear & Master Controller.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -144,7 +136,7 @@
                       DREAMWORKS POWER AND TECHNOLOGIES, INC.
                     </h1>
                     <p>
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores perspiciatis, illo maxime voluptatem a itaque suscipit.
+                      We handle all aftermarket requirements of customer such as Parts, Controllers, Lubricants, Filters and all kinds of repair both on mechanical and electrical components of Generating sets, ATS, Switchgear & Master Controller.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -168,7 +160,7 @@
                       DREAMWORKS POWER AND TECHNOLOGIES, INC.
                     </h1>
                     <p>
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores perspiciatis, illo maxime voluptatem a itaque suscipit.
+                      We handle all aftermarket requirements of customer such as Parts, Controllers, Lubricants, Filters and all kinds of repair both on mechanical and electrical components of Generating sets, ATS, Switchgear & Master Controller.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -192,7 +184,7 @@
                       DREAMWORKS POWER AND TECHNOLOGIES, INC.
                     </h1>
                     <p>
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores perspiciatis, illo maxime voluptatem a itaque suscipit.
+                      We handle all aftermarket requirements of customer such as Parts, Controllers, Lubricants, Filters and all kinds of repair both on mechanical and electrical components of Generating sets, ATS, Switchgear & Master Controller.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -337,7 +329,7 @@
   <div class="container">
     <div class="product_heading">
       <h2>
-        Top Sale Products
+        Smart Energy
       </h2>
     </div>
     <div class="product_container">
@@ -371,7 +363,7 @@
         </div>
         <div class="btn-box">
           <a href="">
-            Add To Cart
+            Inquire Now
           </a>
         </div>
       </div>
@@ -405,7 +397,7 @@
         </div>
         <div class="btn-box">
           <a href="">
-            Add To Cart
+            Inquire Now
           </a>
         </div>
       </div>
@@ -439,7 +431,7 @@
         </div>
         <div class="btn-box">
           <a href="">
-            Add To Cart
+            Inquire Now
           </a>
         </div>
       </div>
@@ -447,249 +439,247 @@
   </div>
 </section>
 
-<!-- End Product Section-->
+<!-- end product section -->
+
+
+<!-- product section -->
+
+<section class="product_section ">
+  <div class="container">
+    <div class="product_heading">
+      <h2>
+        Engineering Services
+      </h2>
+    </div>
+    <div class="product_container">
+      <div class="box">
+        <div class="box-content">
+          <div class="img-box">
+            <img src="images/poster.png" alt="">
+          </div>
+          <div class="detail-box">
+            <div class="text">
+              <h6>
+                Lorem Ipsum
+              </h6>
+              <h5>
+                <span>$</span> 300
+              </h5>
+            </div>
+            <div class="like">
+              <h6>
+                Like
+              </h6>
+              <div class="star_container">
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="btn-box">
+          <a href="">
+            Inquire Now
+          </a>
+        </div>
+      </div>
+      <div class="box">
+        <div class="box-content">
+          <div class="img-box">
+            <img src="images/poster.png" alt="">
+          </div>
+          <div class="detail-box">
+            <div class="text">
+              <h6>
+                Lorem Ipsum
+              </h6>
+              <h5>
+                <span>$</span> 300
+              </h5>
+            </div>
+            <div class="like">
+              <h6>
+                Like
+              </h6>
+              <div class="star_container">
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="btn-box">
+          <a href="">
+            Inquire Now
+          </a>
+        </div>
+      </div>
+      <div class="box">
+        <div class="box-content">
+          <div class="img-box">
+            <img src="images/poster.png" alt="">
+          </div>
+          <div class="detail-box">
+            <div class="text">
+              <h6>
+                Lorem Ipsum
+              </h6>
+              <h5>
+                <span>$</span> 300
+              </h5>
+            </div>
+            <div class="like">
+              <h6>
+                Like
+              </h6>
+              <div class="star_container">
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="btn-box">
+          <a href="">
+            Inquire Now
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 <!-- end product section -->
 
 
-  <!-- product section -->
+<!-- product section -->
 
-  <section class="product_section ">
-    <div class="container">
-      <div class="product_heading">
-        <h2>
-          Feature Items
-        </h2>
+<section class="product_section ">
+  <div class="container">
+    <div class="product_heading">
+      <h2>
+        Engineer Enterprises
+      </h2>
+    </div>
+    <div class="product_container">
+      <div class="box">
+        <div class="box-content">
+          <div class="img-box">
+            <img src="images/poster.png" alt="">
+          </div>
+          <div class="detail-box">
+            <div class="text">
+              <h6>
+                Lorem Ipsum
+              </h6>
+              <h5>
+                <span>$</span> 300
+              </h5>
+            </div>
+            <div class="like">
+              <h6>
+                Like
+              </h6>
+              <div class="star_container">
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="btn-box">
+          <a href="">
+            Inquire Now
+          </a>
+        </div>
       </div>
-      <div class="product_container">
-        <div class="box">
-          <div class="box-content">
-            <div class="img-box">
-              <img src="images/poster.png" alt="">
-            </div>
-            <div class="detail-box">
-              <div class="text">
-                <h6>
-                  Lorem Ipsum
-                </h6>
-                <h5>
-                  <span>$</span> 300
-                </h5>
-              </div>
-              <div class="like">
-                <h6>
-                  Like
-                </h6>
-                <div class="star_container">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                </div>
-              </div>
-            </div>
+      <div class="box">
+        <div class="box-content">
+          <div class="img-box">
+            <img src="images/poster.png" alt="">
           </div>
-          <div class="btn-box">
-            <a href="">
-              Add To Cart
-            </a>
+          <div class="detail-box">
+            <div class="text">
+              <h6>
+                Lorem Ipsum
+              </h6>
+              <h5>
+                <span>$</span> 300
+              </h5>
+            </div>
+            <div class="like">
+              <h6>
+                Like
+              </h6>
+              <div class="star_container">
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="box">
-          <div class="box-content">
-            <div class="img-box">
-              <img src="images/poster.png" alt="">
-            </div>
-            <div class="detail-box">
-              <div class="text">
-                <h6>
-                  Lorem Ipsum
-                </h6>
-                <h5>
-                  <span>$</span> 300
-                </h5>
-              </div>
-              <div class="like">
-                <h6>
-                  Like
-                </h6>
-                <div class="star_container">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                </div>
-              </div>
-            </div>
+        <div class="btn-box">
+          <a href="">
+            Inquire Now
+          </a>
+        </div>
+      </div>
+      <div class="box">
+        <div class="box-content">
+          <div class="img-box">
+            <img src="images/poster.png" alt="">
           </div>
-          <div class="btn-box">
-            <a href="">
-              Add To Cart
-            </a>
+          <div class="detail-box">
+            <div class="text">
+              <h6>
+                Lorem Ipsum
+              </h6>
+              <h5>
+                <span>$</span> 300
+              </h5>
+            </div>
+            <div class="like">
+              <h6>
+                Like
+              </h6>
+              <div class="star_container">
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="box">
-          <div class="box-content">
-            <div class="img-box">
-              <img src="images/poster.png" alt="">
-            </div>
-            <div class="detail-box">
-              <div class="text">
-                <h6>
-                  Lorem Ipsum
-                </h6>
-                <h5>
-                  <span>$</span> 300
-                </h5>
-              </div>
-              <div class="like">
-                <h6>
-                  Like
-                </h6>
-                <div class="star_container">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="btn-box">
-            <a href="">
-              Add To Cart
-            </a>
-          </div>
+        <div class="btn-box">
+          <a href="">
+            Inquire Now
+          </a>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
 
-  <!-- end product section -->
-
-
-  <!-- product section -->
-
-  <section class="product_section ">
-    <div class="container">
-      <div class="product_heading">
-        <h2>
-          New Arrivals
-        </h2>
-      </div>
-      <div class="product_container">
-        <div class="box">
-          <div class="box-content">
-            <div class="img-box">
-              <img src="images/poster.png" alt="">
-            </div>
-            <div class="detail-box">
-              <div class="text">
-                <h6>
-                  Lorem Ipsum
-                </h6>
-                <h5>
-                  <span>$</span> 300
-                </h5>
-              </div>
-              <div class="like">
-                <h6>
-                  Like
-                </h6>
-                <div class="star_container">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="btn-box">
-            <a href="">
-              Add To Cart
-            </a>
-          </div>
-        </div>
-        <div class="box">
-          <div class="box-content">
-            <div class="img-box">
-              <img src="images/poster.png" alt="">
-            </div>
-            <div class="detail-box">
-              <div class="text">
-                <h6>
-                  Lorem Ipsum
-                </h6>
-                <h5>
-                  <span>$</span> 300
-                </h5>
-              </div>
-              <div class="like">
-                <h6>
-                  Like
-                </h6>
-                <div class="star_container">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="btn-box">
-            <a href="">
-              Add To Cart
-            </a>
-          </div>
-        </div>
-        <div class="box">
-          <div class="box-content">
-            <div class="img-box">
-              <img src="images/poster.png" alt="">
-            </div>
-            <div class="detail-box">
-              <div class="text">
-                <h6>
-                  Lorem Ipsum
-                </h6>
-                <h5>
-                  <span>$</span> 300
-                </h5>
-              </div>
-              <div class="like">
-                <h6>
-                  Like
-                </h6>
-                <div class="star_container">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="btn-box">
-            <a href="">
-              Add To Cart
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-  <!-- end product section -->
+<!-- end product section -->
 
   <!-- contact section -->
   <section class="contact_section layout_padding">
