--- a/handtime-html/product.html
+++ b/handtime-html/product.html
@@ -58,7 +58,7 @@
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="product.html">Products</a>
+                <a class="nav-link" href="product.html">Services</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="testimonial.html">Testimonial</a>
@@ -67,14 +67,6 @@
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
             </ul>
-            <div class="user_optio_box">
-              <a href="">
-                <i class="fa fa-user" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-              </a>
-            </div>
           </div>
         </nav>
       </div>
@@ -88,7 +80,7 @@
     <div class="container">
       <div class="product_heading">
         <h2>
-          Top Sale Products
+          Smart Energy
         </h2>
       </div>
       <div class="product_container">
@@ -122,7 +114,7 @@
           </div>
           <div class="btn-box">
             <a href="">
-              Add To Cart
+              Inquire Now
             </a>
           </div>
         </div>
@@ -156,7 +148,7 @@
           </div>
           <div class="btn-box">
             <a href="">
-              Add To Cart
+              Inquire Now
             </a>
           </div>
         </div>
@@ -190,7 +182,7 @@
           </div>
           <div class="btn-box">
             <a href="">
-              Add To Cart
+              Inquire Now
             </a>
           </div>
         </div>
@@ -207,7 +199,7 @@
     <div class="container">
       <div class="product_heading">
         <h2>
-          Feature Items
+          Engineering Services
         </h2>
       </div>
       <div class="product_container">
@@ -241,7 +233,7 @@
           </div>
           <div class="btn-box">
             <a href="">
-              Add To Cart
+              Inquire Now
             </a>
           </div>
         </div>
@@ -275,7 +267,7 @@
           </div>
           <div class="btn-box">
             <a href="">
-              Add To Cart
+              Inquire Now
             </a>
           </div>
         </div>
@@ -309,7 +301,7 @@
           </div>
           <div class="btn-box">
             <a href="">
-              Add To Cart
+              Inquire Now
             </a>
           </div>
         </div>
@@ -327,7 +319,7 @@
     <div class="container">
       <div class="product_heading">
         <h2>
-          New Arrivals
+          Engineer Enterprises
         </h2>
       </div>
       <div class="product_container">
@@ -361,7 +353,7 @@
           </div>
           <div class="btn-box">
             <a href="">
-              Add To Cart
+              Inquire Now
             </a>
           </div>
         </div>
@@ -395,7 +387,7 @@
           </div>
           <div class="btn-box">
             <a href="">
-              Add To Cart
+              Inquire Now
             </a>
           </div>
         </div>
@@ -429,7 +421,7 @@
           </div>
           <div class="btn-box">
             <a href="">
-              Add To Cart
+              Inquire Now
             </a>
           </div>
         </div>
