--- a/handtime-html/testimonial.html
+++ b/handtime-html/testimonial.html
@@ -67,14 +67,6 @@
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
             </ul>
-            <div class="user_optio_box">
-              <a href="">
-                <i class="fa fa-user" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-              </a>
-            </div>
           </div>
         </nav>
       </div>
@@ -301,7 +293,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="">DREAMWORKS POWER AND TECHNOLOGIES, INC.</a>
       </p>
     </div>
   </section>
